# -python-_finding_differences

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tarakanov-check.yml
gendiff/: __init__.py  extract_data.py  generate_diff.py
gendiff/auxiliary/: extract_data.py  get_argumets.py  get_data.py  get_diff.py  get_format.py  return_format.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/formatting/: get_description_value.py  get_json_description.py  get_json_format.py  get_nested_format.py  get_plain_format.py  get_yml_description.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: for_remove.py  test_extract_data.py  test_generate_diff.py
tests/fixtures/: flat_resalt.py  nested_result_from_yml.txt  nested_to_json_format.txt  plain_from_nested_yml.txt  plain_to_json_format.txt
