[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Comparison of the original and the modified document in json or yml format and output of differences."
authors = ["Andrey_Tarakanov <andrey.t-krd@yandex.ru>"]
license = "free"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
pytest = "^7.3.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
